  recognized as part of identifiers).
- Added the possibility to testwave to extract a tagged comment based on a
  preprocessor constant (testwave V0.4.0).
- Made the predefined_macros_grammar thread safe.
- Added dll support for the generated Wave libraries.
- Added the const_iterator based exlicit instantiations for the Re2C lexer to 
  the built Wave library and dll.
- Added the whitespace handling policy to the context object.
- Change the --preserve option of the wave tool to take a single integer 
  argument (0: no whitespace is preserved, 1: only comments are preserved, 
  2: all whitespace is preserved)
- Edited the command line option descriptions of the wave driver.
- Fixed broken tags in documentation (magically inserted by DreamWeaver).
- Merged the new whitespace_handling policy with the existing preprocessing 
  hooks. The name of the new preprocessing hook ist may_skip_whitespace().
- Fixed compatibility issues for CW9.4 in the Wave test aplication.
- Added get_errorcode() member to the wave exception classes allowing to 
  get back the reason for the exception.
- Added boost::wave::is_recoverable(cpp_exception const&) alowing to decide,
  whether it is possible to continue after a cpp_exception has been thrown.
  This is a temporary hack to overcome the current limitation of the library
  not allowing to do generic error recovery. It allows to recover from 75% of
  the generated errors types.
  
Boost V1.33.1
- Version 1.2.1
- Fixed bug reported as Sourceforge bug 1274584.
- Switched to Re2C V0.9.9.
- Fixed a bug where the 'parameters' and 'definition' parameters to the 
  defined_macro callback of the preprocessing hooks were always empty (thanks
  to Stefan Seefeld for reporting).
- Fixed missing namespace specifiers in token definition macros (thanks to 
  Jozsef Mihalicza for reporting).
- Enabled --preserved and --long_long modes by default for the cpp_tokens 
  sample.